# aiffel

./: .gitignore  README.md  techstack.md  techstack.yml  노드10_프로젝트.ipynb  노드9_이미지분류.ipynb  이미지_데이터_만들고_분류하기.ipynb
Exploration/MQ1/: GPT-1 구현하기.ipynb
Exploration/Quest2/: Bike_sharing.ipynb  README.md  project1_sykim.ipynb  project2_sykim.ipynb
Exploration/Quest3/: Evaluation Metric.ipynb  Visualization.ipynb
Exploration/Quest4/: Quest C-2.ipynb  README.md  test.py
Exploration/Quest5/: README.md  kaggle_housing_pj.ipynb
Exploration/Quest6/: my_camera.ipynb
Exploration/Quest7/: README.md
Exploration/Quest8/: Naver Movie Review - LSTM, CNN.ipynb  README.md
Exploration/bike_regression/: Bike_sharing.ipynb  project1_sykim.ipynb  project2_sykim.ipynb
Exploration/camera_sticker/: README.md
Exploration/kaggle_kakr_housing/: README.md  kaggle_housing_pj.ipynb
Exploration/keras_models/: README.md  cnn_test.py
Exploration/news_summarization/: News Summarize.ipynb  README.md
Exploration/sp_tokenizer/: README.md  project_SentencePiece.ipynb
Exploration/transformer_chatbot/: README.md  트랜스포머로 만드는 대화형 챗봇.ipynb  트랜스포머로 만드는 대화형 챗봇_프로젝트.ipynb
MLOps/Day5/app/: Dockerfile.fastapi  pyproject.toml
MLOps/Day5/app/src/: main.py  requirements.txt  settings.py
MLOps/Day5/app/src/model/: naver_vocab.json  router.py  schemas.py  textclassifier.py  vocabs.py
STARTER/: 노드11_breast_cancer.ipynb  노드11_digits.ipynb  노드11_iris_mnist.ipynb  노드11_wine.ipynb  노드4_사이킷럿.ipynb  노드5_지도학습(분류).ipynb  노드6_지도학습(회귀).ipynb  노드7_비지도학습.ipynb  노드8_자연어처리.ipynb
STUDY/: GitHub_project.md
(+226 files in other folders)
